# ChangeLog for media-gfx/imagemagick
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.502 2013/06/24 01:47:54 ssuominen Exp $

*imagemagick-6.8.6.1 (24 Jun 2013)

  24 Jun 2013; Samuli Suominen <ssuominen@gentoo.org>
  +imagemagick-6.8.6.1.ebuild:
  Version bump.

*imagemagick-6.8.5.4 (03 May 2013)

  03 May 2013; Samuli Suominen <ssuominen@gentoo.org>
  +imagemagick-6.8.5.4.ebuild:
  Version bump.

*imagemagick-6.8.4.9 (14 Apr 2013)

  14 Apr 2013; Samuli Suominen <ssuominen@gentoo.org>
  +imagemagick-6.8.4.9.ebuild:
  Version bump.

  01 Feb 2013; Tomáš Chvátal <scarabeus@gentoo.org> imagemagick-6.7.8.7.ebuild,
  imagemagick-6.7.9.9.ebuild:
  Use subslots to make rmagic automatically rebuild with update. Fixes
  bug#430636.

  21 Jan 2013; Mike Frysinger <vapier@gentoo.org>
  +files/imagemagick-6.7.8.7-freetype.patch, imagemagick-6.7.8.7.ebuild,
  imagemagick-6.7.9.9.ebuild:
  Fix cross-compiling with freetype while upstream sorts it out.

  21 Jan 2013; Mike Frysinger <vapier@gentoo.org> imagemagick-6.7.8.7.ebuild,
  imagemagick-6.7.9.9.ebuild:
  Disable search of libtool files (like ltdl.la) as well as -I/-L build paths
  #383929 by Francesco Riosa.

*imagemagick-6.7.9.9 (04 Oct 2012)

  04 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
  +imagemagick-6.7.9.9.ebuild:
  Version bump. Fix documentation installation to include 'html' in it's path
  for $DOC_SYMLINKS_DIR to work wrt #424209 by Guenther Brunthaler

  04 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
  -imagemagick-6.7.6.4.ebuild:
  old

  04 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
  imagemagick-6.7.8.7.ebuild:
  ppc stable wrt #428718

  28 Aug 2012; Brent Baude <ranger@gentoo.org> imagemagick-6.7.8.7.ebuild:
  Marking imagemagick-6.7.8.7 ppc64 for bug 428718

  19 Aug 2012; Raúl Porcel <armin76@gentoo.org> imagemagick-6.7.8.7.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #428718
