@@ -3,25 +3,19 @@ Hash: SHA256
 
 AUX imagemagick-6.7.8.7-freetype.patch 1114 SHA256 fcdb9382eddab0ae73f115178296933b1c8705719b2c3c43ce8274441a4387e7 SHA512 86372988ab4ee7be8573d50f7dd5022f031cfdf1e3e6e478c99d155e9cbc251a0db7496c141931e2b08d3e5142169ef56b544b70449dc41cf3376ddaf99e8ec1 WHIRLPOOL 9eb6105540e49b35e13e4ae7863a8fb20bd7bd292c93bc29c4e9c6914b0fb92496b736276a5c7f926a2a1b755547b2ced6471e929d0ce95ff3a6aa81c91aba62
 DIST ImageMagick-6.7.8-7.tar.xz 7830744 SHA256 593e09bec0e6def3f9d6d6b0f7970ddd37dd9420a1286ce27e3f4ba26b78f114 SHA512 76b30887a40e6c74006a0e17f848893901bf001d68b4bf4ab6f38bf3147bf8b1fffa7e0a3aca8acb46bd65c6489aee6f9c28606f43d46b00cf9be2b6a93290dc WHIRLPOOL 2b746348aa058e4c2ef1096c62254f7694d7cc32bb23ee36f8a6b9f8fbb4603a98c2d473d0656004d40923b124c9d882842fec700fbac4900eaba1a5a102164a
-DIST ImageMagick-6.7.9-9.tar.xz 8363720 SHA256 706164aa20219f2f72bed9f8f2d1a998897fed61cd95cd4939be4e8fa7e1904a SHA512 41070032e7deddba17a779a985d600526c0eb32a5518db5d11aa722a65998743344105825155606dc2aab8af45ffa585f2c34e55f492662998773c1d84f880f9 WHIRLPOOL 09428d51460276d558e0c7c2bcd50b765865b59a2b243bae6f82b363c469599c2fb190d41a55d990b0474e2d9417acfb24506e3802a528ec84ab43d9283b5705
-DIST ImageMagick-6.8.4-9.tar.xz 8190612 SHA256 1120ded81d4f0725d4d8ddcc9c793da34d4c1c6abe5914b67a79a6e201f01bea SHA512 25c9261c18a5581a616ea43bcaff13cd84ebcb0cd4d4ace5a14862fdd53580c04c8df299b21f3035b0aeffd784f26befb312245c082e854aac4be66593ed093d WHIRLPOOL d18863924bba454b55537ba721b540dff69b897a8814233f1cd8b99534abeff96c55c5be5c29e61222fb7b7a75bf251280fcc57777011c28acf7fe90d1773c23
-DIST ImageMagick-6.8.5-4.tar.xz 8195940 SHA256 3ee7a580f4492aa79b2197a5abeafb7755478e5f13eb9bd621b80701614c3ee5 SHA512 2ba3f37de927712003e00592e62651352bc73d3c9d5c8a5202988eb03d830d3eb412ac32f9efc91da8c7d4ca51c92eca8265458abcb33cb3d935d78714957b60 WHIRLPOOL 103d24b92101bff65f25f6650363474f9042cffd576ae418b0aa441777ff889e531d29316c735ebbffcf5a39f1478b786dfd2a20c71a69dbe81000187ed48245
 DIST ImageMagick-6.8.6-1.tar.xz 7463396 SHA256 8cf52dafa7269f872b54394fa57f9b55cc2e9b4858b50b6a25999b6d4c9c4e03 SHA512 f4abcfa987eb7934c77730ea74a66ba3224e9fa2695d245166bb43b2704c6aea550c57f5e356ce6f92677e4577007c05bc41c61bd10f5a59a815240e30e4313c WHIRLPOOL b403c2247c0f0123faf17e1e8641d5a6fcd564205892e03f49e5a0ea7fac7dc5a067b9eee2c3e9d23d1513e659b5907e8f1dcfdcff5b357da97e6985b52acaf7
 EBUILD imagemagick-6.7.8.7.ebuild 4259 SHA256 2977d296b1e5017f891c97c8863cc869c8255de7e428c21d68808e1f3e767adf SHA512 f7114d939a7c6e4256928bb61db99a6b256c44bf4285a1342e22e29706fee15b1d682a3b7e425bc030f5fd062a9eaede21eb787a48d1228831fdfdb1fbd9fae7 WHIRLPOOL 7e76a8f519f9e7f92dd4f11ae20d2311fd4276716f957cf0ce4f84fb9c0e6d55caa6f839140e307c796536853b5a9a6875868ab8e6b1d2ec15fbcfb40998f24a
-EBUILD imagemagick-6.7.9.9.ebuild 4410 SHA256 f16487233cd935b18bc34427ee80548a3d7d2e41afb4d71f26eee3e99bf52c84 SHA512 3284236a5a681e677f5e6bc72e97134e0140e29eb0faa8e101c74540831dc4ff81aeacc1875b3ecdde8a67d78702fba30e45c542ed0b9db6b81f1b5393adf6da WHIRLPOOL 80170e5d28f52ac6b79b3b8bd1baba083e82af0384c03b292780e52cffd7faf936409a1d8f25880d55eee6cbff49ed090c4e7a1c037f1917ddb75a716f0582cd
-EBUILD imagemagick-6.8.4.9.ebuild 4281 SHA256 5b1469fc0655ab2ef5a21fca01aa03a8b7691436a05e38af67d6bbdd7330b21c SHA512 484ffac54381682716b0721055aa4bbe65b0383b261468d89c74e97cf4f14519ec42bd0880e84f0957db8fed741b1c7cf34cf9079b07c8288f5fec634575aade WHIRLPOOL fe2f9e70dea16c0b44b48592455a91c20ca490d1a80bb38bc85dcf190c3f85cc68b32a642096be54e913c2d52a64ecbdecdf71bdfbb6e3d94967079a33978762
-EBUILD imagemagick-6.8.5.4.ebuild 4281 SHA256 3e1b7daaed55d624a89b8384f76c889bafe31a885d3d69b6a535dd916b3f4031 SHA512 ff828e5545b52f2dd229960febd05ab3df4c0685c56c38e61522acec57ae94d8ec86e6d168dfb609b6912c918008d2e94cc618cc93ac1b17c340a86132607fdf WHIRLPOOL 88477007726e2bd199b3ac7ed824c6df891841ac16e879dfe85d33dd40707d4b559132f6ce556839ebbf5534e74676ff3247395835d72672d5d3e443f7d9dfe5
 EBUILD imagemagick-6.8.6.1.ebuild 4281 SHA256 33634096aef410eb664e86234e87dedda9b051827481505c04bbebb8811e91dc SHA512 2dc1b4f667ca82200567a045891ae94f25d08881d130d324a1b6c386fb7c301ac7ae7ea0c8adc31f5caf544ebd3f5ac67cf279f15ca71f5e13dd965117f6aa15 WHIRLPOOL 8cbc6819aef9c2635aeea78095b4f5b14f36e05f6bc74b8f7ca109435b80201c059a8cb3bd84eb7e0e203b955099094d9e7c5f48b9938a28240e30d261245584
-MISC ChangeLog 74328 SHA256 7b1acc431ea45d8437316fbe6bfcc6754ccb22dc73bd22e7d456ad92fee99de6 SHA512 97210d2601cfa3c96ccc9674e2fc84f85bacdfd87573de8d54261b9c0e36981af7241cd593de9ba2496e806bf245756e6f5c9944b276ff391f277c2d1ad6be71 WHIRLPOOL a89afbe0395616e2945f5b5927bcc469c4b1de41ed14e26e70830b239a77dda270413b9a9170b42effd7048294b6d2f1cf89e3231ed16df99bec257a1293735e
+MISC ChangeLog 74480 SHA256 c37be6fadfea1754a8dd3d09b9910ed4c367fa841ba239b4757dc954072db995 SHA512 f3fea2c2f2da7b8957e600a2b80e99f9e1b8894e29f3d159f06bcd8bf5690196ae7bf5b8d583d8e9006ca183346f6bd5f99a7eaf9f0963ba8e69617662437a45 WHIRLPOOL 4544cd39a9170ea31ff83c67d405c2014399bd6a9a4dfecbd6e434526e2e8205f864a0ccc09feba1672facb41ba7e638876f856d24c7c4c8776c90d50f21c11a
 MISC metadata.xml 1050 SHA256 c7fad295a9ca9207454a88d9794902dd76f732f01a439d29f94372ce9ae4af7d SHA512 d502e1038cd08123b1a0d25dccee6a4134bd8fc768c228042b546c8ee226432430107f76b506e946eb5a9b358c13115e5c6e7a1c80f3fe5b4061885263b0dbd7 WHIRLPOOL 675922fbabfacc2660f9572b61a3cee8bb0967b0df0e6e211271399dcb6edc050246344e5251e6a4a4411f8671f3c625d07f3606531662ab5b278fdcff692010
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRx6VEAAoJEEdUh39IaPFN+z0H/jdwseDDpGtF5IGqTBYMinW9
-IOGvmhoJ7WrbN0XDUZWMFFgt0JtPzaSbJ16aIAB+c/sSimHhw61k+wdZzmuagulu
-ZsuG6gCrWgJclRDJP5NPukZz5qZAqGJAvcp5vyW2KM+ntfzTYRMLVhFHPCxOQybX
-uM5+TV39RAJnFKrokUQpxRJkEWMJaHa2cF1SfwnxR7Y1pMY5fDt6cDlW3SsGe5HY
-JKualWnx3Ztfc/IcYsUZwOoXElAPrHlztE+0y8IrhzJcoCLpKxWX9UNyvXOrg5Ma
-aT/Xf9Fuh3ZUj6HNfKhYk2ywH/3/cfg7U9RB4pznOgXvYSlYjUteHlbMJocDKto=
-=B87L
+iQEcBAEBCAAGBQJRyrMOAAoJEEdUh39IaPFNXC4H/RwfAT6IJCN0+igfhzt1OeCW
+UPy6IFc5tr7nZigeSEr7Hj7qWVW5E8DWE1lfwoQ/0w5EP8QbJ2oomojxMHGTUEOV
+EX/ZA4tACpAKPqLxQCy2dT0y1RZQ72V2M+8N6FA+iuvh7Vb8S7rUout+WiqD+2u1
+secbGLzy3iGXINjjVR4NtFlIQ9xGfavQJz82Dv3yGMyzThz+bpQhol6CC36xrhpm
+lISaNG3I8+EPXhxdbw7LJSkah4N9HCQ9WTFH7x2Pyeh8PYsm3npCW6fjARGKP5Z9
+5KE7yPf18BtXtCaQ0bjIGFdv6GqKdLrRiNvLyYGXH9Xprrg2uMps7Bhl6Ve2Cug=
+=iYgG
 -----END PGP SIGNATURE-----
